Add figures, data, and instructions

--- a/kaggle-competition-data-benchmark.ipynb
+++ b/kaggle-competition-data-benchmark.ipynb
@@ -10,15 +10,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "from sklearn.datasets import load_iris\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from os import path"
+    "from os import path\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,27 +65,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[None, None, None, None]"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "fnames = ['X_train.csv', 'X_test.csv', 'y_train.csv', 'y_test.csv']\n",
     "arrs = [X_train, X_test, y_train, y_test]\n",
     "\n",
-    "# Save the all the files to disk\n",
-    "[np.savetxt(path.join('data', fname), arr, delimiter=',') \n",
-    " for (fname, arr) in zip(fnames, arrs)]"
+    "# Convert the data matrices into pandas DataFrames\n",
+    "X_train = pd.DataFrame(X_train)\n",
+    "X_test = pd.DataFrame(X_test)\n",
+    "\n",
+    "# Save the data matrices to disk\n",
+    "fnames = ['X_train.csv', 'X_test.csv']\n",
+    "arrs = [X_train, X_test]\n",
+    "[arr.to_csv(path.join('data', fname), index=False)\n",
+    " for (arr, fname) in zip(arrs, fnames)]\n",
+    "\n",
+    "# Convert the training vector into a DataFrame\n",
+    "y_train = pd.DataFrame(y_train)\n",
+    "y_train.to_csv('data/y_train.csv', index=False)"
    ]
   },
   {
@@ -96,11 +95,60 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Making a Valid Solution and Submission File\n",
+    "Kaggle requires that we have a valid solution file and a valid submission file. For metric of \"CategorizationAccuracy\" it has the expected format (for example)\n",
+    "\n",
+    "|Id | Category|\n",
+    "| --| --------|\n",
+    "| 1 | 0       |\n",
+    "| 2 | 1       |\n",
+    "\n",
+    "and so forth. We are going to convert the `y_test` to meet this standard and also generate a valid submission file.\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Make a valid solution file\n",
+    "nsamples = len(y_test)\n",
+    "id_col = np.arange(nsamples)\n",
+    "\n",
+    "solution_file = pd.DataFrame({\"Id\": id_col,\n",
+    "                              \"Category\": y_test})\n",
+    "\n",
+    "# Make a valid submission file\n",
+    "nlabels = len(np.unique(y_test))\n",
+    "rng = np.random.RandomState(17)\n",
+    "rand_pred = rng.randint(low=0, high=nlabels, size=nsamples)\n",
+    "\n",
+    "submission_file = pd.DataFrame({\"Id\": id_col,\n",
+    "                                \"Category\": rand_pred})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save the files to disk\n",
+    "solution_file.to_csv('data/solution_file.csv', index=False)\n",
+    "submission_file.to_csv('data/submission_file.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Running the Benchmark\n",
+    "For the benchmark, I am just going to use the randomly generated submission file. Of course in real competition you should probably provide a better benchmark, but this is fine for this example."
+   ]
   }
  ],
  "metadata": {
